advanced mobile coupon

--- a/app/views/advanced_v2.slim
+++ b/app/views/advanced_v2.slim
@@ -110,7 +110,7 @@ body
               a.coupon-text href="#" Enter coupon code
               span.coupon-none --
               span.hidden  
-                input type="text" data-recurly="coupon" value="test"
+                input type="text" data-recurly="coupon" value="Enter code"
                 input type="button" id="enter-coupon" value="Apply" class="btn-submit"
               span data-recurly="currency_symbol"
               span data-recurly="discount_now"
