--- a/app/views/advanced_v2.slim
+++ b/app/views/advanced_v2.slim
@@ -38,8 +38,8 @@ body
 
             .select-wrap
               select data-recurly="currency_code" id="currency_code" name="currency_code"
-                option value="USD"
-                option value="EUR"
+                option value="USD" USD
+                option value="EUR" EUR
 
           .subscription-pricing-container
             .subscription-pricing
@@ -57,7 +57,7 @@ body
           .row
             h3.section-title--billing Billing Information
             div.payment-type
-              a href="#" id="payby-credit-card" Credit Card
+              a href="#" id="payby-credit-card" class="active" Credit Card
               a href="#" id="payby-paypal" PayPal
           .row.customer-fields--name
             .form-input.form-input__first_name
@@ -121,14 +121,15 @@ body
                     a.coupon-text href="#" Enter coupon code
                     span.hidden  
                         input type="text" data-recurly="coupon" value="Enter code"
-                        input type="button" id="enter-coupon" value="Apply" class="btn-submit"
+                        
                     span.addon-item--pricing
                       span.coupon-none --
+                        input type="button" id="enter-coupon" value="Apply" class="btn-submit"
                         
             div.tax
               | Tax
               span.total-amount
-                span.symbol $
+                span.symbol data-recurly="currency_symbol"
                 span data-recurly="tax_now"
             div.total
               | Total
