--- a/app/views/advanced_v2.slim
+++ b/app/views/advanced_v2.slim
@@ -36,7 +36,7 @@ body
             .quantity-wrap
               input type="number" data-recurly="plan_quantity" id="plan_quantity" name="plan-quantity" class="quantity form-input__required" value="1"
 
-            .select-wrap
+            .select-wrap.curr
               select data-recurly="currency_code" id="currency_code" name="currency_code"
                 option value="USD" USD
                 option value="EUR" EUR
@@ -121,10 +121,9 @@ body
                     a.coupon-text href="#" Enter coupon code
                     span.hidden  
                         input type="text" data-recurly="coupon" value="Enter code"
-                        
+                        input type="button" id="enter-coupon" value="Apply" class="btn-submit"
                     span.addon-item--pricing
                       span.coupon-none --
-                        input type="button" id="enter-coupon" value="Apply" class="btn-submit"
                         
             div.tax
               | Tax
