--- a/app/views/advanced_v2.slim
+++ b/app/views/advanced_v2.slim
@@ -114,13 +114,13 @@ body
         section.order-summary-details
           .row.order-summary
             div.addons-summary-container
-            div.row
+            div.row.coupon
               ul.addons-list
                 li.addons-list--item
                   span.addon-item--name
                     a.coupon-text href="#" Enter coupon code
                     span.hidden  
-                        input type="text" data-recurly="coupon" value="Enter code"
+                        input type="text" data-recurly="coupon" value="Enter code" class="coupon-code"
                         input type="button" id="enter-coupon" value="Apply" class="btn-submit"
                     span.addon-item--pricing
                       span.coupon-none --
