--- a/app/views/advanced_v2.slim
+++ b/app/views/advanced_v2.slim
@@ -57,56 +57,59 @@ body
           .row
             h3.section-title--billing Billing Information
             div.payment-type
-              a href="#" id="payby-credit-card" class="active" Credit Card
-              a href="#" id="payby-paypal" PayPal
-          .row.customer-fields--name
-            .form-input.form-input__first_name
-              input type="text" data-recurly="first_name" id="first_name" name="first-name" class="form-input__required" placeholder="First Name"
+              a href="#credit-card" id="payby-credit-card" class="active" Credit Card
+              a href="#paypal" id="payby-paypal" PayPal
+          
+          div#paypal.hidden.panel
+          div#credit-card.panel
+            .row.customer-fields--name
+              .form-input.form-input__first_name
+                input type="text" data-recurly="first_name" id="first_name" name="first-name" class="form-input__required" placeholder="First Name"
 
-            .form-input.form-input__last_name
-              input type="text" data-recurly="last_name" id="last_name" name="last-name" class="form-input__required" placeholder="Last Name"
+              .form-input.form-input__last_name
+                input type="text" data-recurly="last_name" id="last_name" name="last-name" class="form-input__required" placeholder="Last Name"
 
-          .row.customer-fields--email
-            .form-input.form-input__email
-              input type="text" data-recurly="email" id="email" name="email" class="form-input__required" placeholder="Email"
+            .row.customer-fields--email
+              .form-input.form-input__email
+                input type="text" data-recurly="email" id="email" name="email" class="form-input__required" placeholder="Email"
 
-          .row.customer-fields--card-number
-            .form-input.form-input__number
-              input type="text" data-recurly="number" id="number" name="number" class="form-input__required" placeholder="4111 1111 1111 1111"
-              span.icon.icon-card.icon-card__generic
-              span.icon.icon-lock
+            .row.customer-fields--card-number
+              .form-input.form-input__number
+                input type="text" data-recurly="number" id="number" name="number" class="form-input__required" placeholder="4111 1111 1111 1111"
+                span.icon.icon-card.icon-card__generic
+                span.icon.icon-lock
 
-          .row.customer-fields--card-details
-            .form-input.form-input__selection.customer-fields--card-expiry.form-input__month.form-input__year
-                input type="text" data-recurly="month" id="month" name="month" placeholder="MM" maxlength="2" class="form-input__required"
-                input type="text" data-recurly="year" id="year" name="year" placeholder="YY" maxlength="2" class="form-input__required"
+            .row.customer-fields--card-details
+              .form-input.form-input__selection.customer-fields--card-expiry.form-input__month.form-input__year
+                  input type="text" data-recurly="month" id="month" name="month" placeholder="MM" maxlength="2" class="form-input__required"
+                  input type="text" data-recurly="year" id="year" name="year" placeholder="YY" maxlength="2" class="form-input__required"
 
-            .form-input.customer-fields--card-cvv.form-input__cvv
-              input type="text" data-recurly="cvv" id="cvv" name="cvv" class="form-input__required" placeholder="CVV"
+              .form-input.customer-fields--card-cvv.form-input__cvv
+                input type="text" data-recurly="cvv" id="cvv" name="cvv" class="form-input__required" placeholder="CVV"
 
-          .row.customer-fields--address.form-input__address
-            .form-input
-              input type="text" data-recurly="address" id="address" name="address" class="form-input__required" placeholder="Address"
+            .row.customer-fields--address.form-input__address
+              .form-input
+                input type="text" data-recurly="address" id="address" name="address" class="form-input__required" placeholder="Address"
 
-          .row.customer-fields--city
-            .form-input.form-input__city
-              input type="text" data-recurly="city" id="city" name="city" class="form-input__required" placeholder="City"
+            .row.customer-fields--city
+              .form-input.form-input__city
+                input type="text" data-recurly="city" id="city" name="city" class="form-input__required" placeholder="City"
 
-          .row
-            .form-input.form-input__state
-              .select-wrap
-                select data-recurly="state" id="state" name="state" class="form-input__required"
-                  option State
-                  == StatesList.to_options
+            .row
+              .form-input.form-input__state
+                .select-wrap
+                  select data-recurly="state" id="state" name="state" class="form-input__required"
+                    option State
+                    == StatesList.to_options
 
-            .form-input.form-input__postal-code
-              input type="text" data-recurly="postal_code" id="postal_code" name="postal-code" class="form-input__required" placeholder="Zip Code"
-          .row
-            .form-input.form-input__country
-              .select-wrap
-                select data-recurly="country" id="country" name="country" class="form-input__required"
-                  option Country
-                  == StatesList.to_options
+              .form-input.form-input__postal-code
+                input type="text" data-recurly="postal_code" id="postal_code" name="postal-code" class="form-input__required" placeholder="Zip Code"
+            .row
+              .form-input.form-input__country
+                .select-wrap
+                  select data-recurly="country" id="country" name="country" class="form-input__required"
+                    option Country
+                    == StatesList.to_options
 
       .order-summary-container
         header.order-summary-title
