--- a/app/views/advanced_v2.slim
+++ b/app/views/advanced_v2.slim
@@ -123,7 +123,7 @@ body
                   span.addon-item--name
                     a.coupon-text href="#" Enter coupon code
                     span.hidden  
-                        input type="text" data-recurly="coupon" value="Enter code" class="coupon-code"
+                        input type="text" data-recurly="coupon" value="Enter coupon code" class="coupon-code"
                         input type="button" id="enter-coupon" value="Apply" class="btn-submit"
                     span.addon-item--pricing
                       span.coupon-none --
