--- a/app/views/handlebars/addons.slim
+++ b/app/views/handlebars/addons.slim
@@ -6,7 +6,7 @@ handlebar id="addon-template" type="text/x-handlebars-template"
     ul.addons-list
       | {{#list}}
       li.addons-list--item
-        input type="checkbox" name="{{code}}" class="checkbox" data-recurly-addon='{{code}}'
+        input type="checkbox" data-recurly="addon" data-recurly-addon="addon_code" value="1"
         span.addon-item--name
           | {{name}}
         .addon-item--pricing
