advanced mobile in progress

--- a/app/views/advanced_v2.slim
+++ b/app/views/advanced_v2.slim
@@ -64,6 +64,9 @@ body
               a href="#paypal" id="payby-paypal" PayPal
           
           div#paypal.hidden.panel
+            .row
+              button id="subscribe" Subscribe with PayPal
+              input type="hidden" id="recurly-token" name="recurly-token"
           div#credit-card.panel
             .row.customer-fields--name
               .form-input.form-input__first_name
