advanced mobile in progress

--- a/app/views/advanced_v2.slim
+++ b/app/views/advanced_v2.slim
@@ -63,7 +63,7 @@ body
               a href="#credit-card" id="payby-credit-card" class="active" Credit Card
               a href="#paypal" id="payby-paypal" PayPal
           
-            .row.customer-fields--name
+            div.customer-fields--name
               .form-input.form-input__first_name
                 input type="text" data-recurly="first_name" id="first_name" name="first-name" class="form-input__required" placeholder="First Name"
 
