advanced mobile in progress

--- a/app/assets/stylesheets/themes/kalekrate/form-advanced.scss
+++ b/app/assets/stylesheets/themes/kalekrate/form-advanced.scss
@@ -113,9 +113,7 @@
     }
 
     input[type="checkbox"] {
-      position: relative;
-      top: -2px;
-      vertical-align: baseline;
+      vertical-align: middle;
       margin-right:10px;
     }
 
