advanced mobile in progress

--- a/app/assets/stylesheets/themes/kalekrate/form-advanced.scss
+++ b/app/assets/stylesheets/themes/kalekrate/form-advanced.scss
@@ -354,6 +354,8 @@ form {
       height: 72px;
       font-size:0;
       box-shadow:none;
+      display:block;
+      margin: 20px auto;
   }
 
   .total, .tax {
