--- a/app/assets/stylesheets/themes/kalekrate/form-advanced.scss
+++ b/app/assets/stylesheets/themes/kalekrate/form-advanced.scss
@@ -401,6 +401,10 @@ form {
   .coupon-text {
     color: #48626c;
   }
+  .confirmation {
+    border: 1px solid #d1dbdf;
+    bottom: -270px;
+  }
 
 
    
