--- a/app/views/advanced_v2.slim
+++ b/app/views/advanced_v2.slim
@@ -24,8 +24,8 @@ body
       .subscription-details-container
         section.form-bar
           .subscription-name-container
-            .select-wrap
-              select data-recurly="plan" id="plan" name="plan"
+            .select-wrap.plan
+              select data-recurly="plan" id="plan" name="plan" class="plan"
                 option value="kale-fan" Kale Fan
                 option value="kale-krazy" Kale Krazy
 
@@ -33,7 +33,7 @@ body
               input type="number" data-recurly="plan_quantity" id="plan_quantity" name="plan-quantity" class="quantity form-input__required" value="1"
 
           .select-wrap.curr
-              select data-recurly="currency_code" id="currency_code" name="currency_code"
+              select data-recurly="currency_code" id="currency_code" name="currency_code" class="curr"
                 option value="USD" USD
                 option value="EUR" EUR
 
