advanced mobile in progress

--- a/app/assets/stylesheets/themes/kalekrate/form-advanced.scss
+++ b/app/assets/stylesheets/themes/kalekrate/form-advanced.scss
@@ -310,11 +310,8 @@ form {
       border: 1px solid #fff;
       font-size:20px;
     }
-    .quantity-wrap {
-
-    }
-    input.quantity {
-
+    .select-wrap.quantity:after {
+      content: "url(/images/icons/number-arrow-green.png)";
     }
     .curr {
 
