--- a/app/views/advanced_v2.slim
+++ b/app/views/advanced_v2.slim
@@ -29,7 +29,7 @@ body
                 option value="kale-fan" Kale Fan
                 option value="kale-krazy" Kale Krazy
 
-          .quantity-wrap
+          .select-wrap.quantity
               input type="number" data-recurly="plan_quantity" id="plan_quantity" name="plan-quantity" class="quantity form-input__required" value="1"
 
           .select-wrap.curr
