--- a/app/assets/stylesheets/themes/kalekrate/form-advanced.scss
+++ b/app/assets/stylesheets/themes/kalekrate/form-advanced.scss
@@ -314,6 +314,7 @@ form {
       color:#fff;
       border: 1px solid #fff;
       font-size:20px;
+      height:44px;
     }
     .select-wrap.quantity {
       width: 15%;
@@ -322,13 +323,16 @@ form {
     .select-wrap.quantity:after {
       content: url('/images/icons/number-arrow-green.png');
     }
+    .select-wrap.quantity:before {
+      
+    }
     .select-wrap.curr {
       width: 20%;
       float:left;
     }
     .select-wrap:before {
       border: 0;
-      height: 38px;
+      height: 42px;
       right: 5px;
       top: 1px;
     }
