--- a/app/views/advanced_v2.slim
+++ b/app/views/advanced_v2.slim
@@ -30,7 +30,7 @@ body
                 option value="kale-krazy" Kale Krazy
 
           .select-wrap.quantity
-            input type="number" data-recurly="plan_quantity" id="plan_quantity" name="plan-quantity" class="quantity form-input__required" value="1"
+            input type="number" data-recurly="plan_quantity" id="plan_quantity" name="plan-quantity" class="form-input__required" value="1"
 
           .select-wrap.curr
             select data-recurly="currency_code" id="currency_code" name="currency_code" class="curr"
