advanced mobile in progress

--- a/app/assets/stylesheets/themes/kalekrate/form-advanced.scss
+++ b/app/assets/stylesheets/themes/kalekrate/form-advanced.scss
@@ -305,7 +305,7 @@ form {
     right:1px
   }
 
-  .subscription-details-container {
+  .form-bar {
       .subscription-pricing {
         position:static;
         transform: translateY(0%);
