some final things for advanced mobile

--- a/app/assets/stylesheets/themes/kalekrate/form-advanced.scss
+++ b/app/assets/stylesheets/themes/kalekrate/form-advanced.scss
@@ -64,9 +64,6 @@
     width: 50%;
     padding-left: 7px;
   }
-  @include mq($medium) {
-    margin-top:5px;
-  }
 
 }
 
@@ -330,6 +327,11 @@ form {
       height:44px;
     }
     @include mq($large) {
+      select.plan {
+        margin-right:-4px;
+      }
+    }
+    @include mq($xlarge) {
       select.plan {
         margin-right:-2px;
       }
