--- a/app/views/one_time.slim
+++ b/app/views/one_time.slim
@@ -13,7 +13,7 @@ head
   == partial(:'shared/meta')
   == partial(:'shared/scripts')
   == css :application
-  == css :minimal_full
+  == css :one_time
 
 body
 
