one time billing updates

--- a/app/assets/stylesheets/themes/kalekrate/form-minimal-full.scss
+++ b/app/assets/stylesheets/themes/kalekrate/form-minimal-full.scss
@@ -20,6 +20,10 @@
     width: auto;
   }
 }
+.subscription-pricing-container.one-time {
+  width: auto;
+}
+
 
 .subscription-pricing {
   @include border-radius(5px);
