--- a/app/views/one_time.slim
+++ b/app/views/one_time.slim
@@ -25,7 +25,7 @@ body
       .subscription-name-container
         strong.subscription-name Salad Spinner
 
-      .subscription-pricing-container
+      .subscription-pricing-container.one-time
         .quantity-wrap
           input type="number" value="1" min="1" class="quantity"
         .subscription-pricing
