one time billing updates

--- a/app/assets/stylesheets/themes/kalekrate/form-minimal-full.scss
+++ b/app/assets/stylesheets/themes/kalekrate/form-minimal-full.scss
@@ -22,6 +22,10 @@
 }
 .subscription-pricing-container.one-time {
   width: auto;
+  @include mq($small) {
+    width: auto;
+    float:left;
+  }
 }
 
 
