--- a/app/assets/stylesheets/themes/kalekrate/form-minimal-full.scss
+++ b/app/assets/stylesheets/themes/kalekrate/form-minimal-full.scss
@@ -20,14 +20,7 @@
     width: auto;
   }
 }
-.subscription-pricing-container.one-time {
-  width: auto;
-  float:left;
-  @include mq($small) {
-    float:right;
-    width: auto;
-  }
-}
+
 
 
 .subscription-pricing {
@@ -73,6 +66,22 @@
     text-align: left;
     margin: 0;
     width: 60%;
+  }
+}
+
+.subscription-pricing-container.one-time {
+  width: 100%;
+  float:left;
+  padding: 0 25px;
+  @include mq($small) {
+    float:right;
+    width: auto;
+  }
+  .quantity-wrap {
+    margin-top:5px;
+  }
+  .subscription-pricing {
+    float:none;
   }
 }
 
