--- a/app/assets/stylesheets/themes/kalekrate/form-minimal-full.scss
+++ b/app/assets/stylesheets/themes/kalekrate/form-minimal-full.scss
@@ -72,7 +72,7 @@
 .subscription-pricing-container.one-time {
   width: 100%;
   float:left;
-  @include mq($large) {
+  @include mq($medium) {
     float:right;
     width: auto;
   }
