one time billing updates

--- a/app/assets/stylesheets/themes/kalekrate/form-onetime.scss
+++ b/app/assets/stylesheets/themes/kalekrate/form-onetime.scss
@@ -10,7 +10,12 @@ input.quantity {
     border:1px solid #fff;
   }
 }
-quantity-wrap:after {
+.quantity-wrap {
+  width:40%;
+  right:-40px;
+  top:21px;
+}
+.quantity-wrap:after {
   content:url('/images/icons/number-arrow-green.png'); 
 }
 .quantity-wrap:before {
