one time billing updates

--- a/app/assets/stylesheets/themes/kalekrate/form-minimal-full.scss
+++ b/app/assets/stylesheets/themes/kalekrate/form-minimal-full.scss
@@ -80,14 +80,14 @@
     width:40%;
     right:-40px;
     top:21px;
-    @include mq($small) {
+    @include mq($medium) {
       top:5px;
       margin: 10px auto;
       width: 90%;
      }
   }
   .subscription-pricing {
-     @include mq($small) {
+     @include mq($medium) {
       float:none;
      }
   }
