one time billing updates

--- a/app/assets/stylesheets/themes/kalekrate/form-minimal-full.scss
+++ b/app/assets/stylesheets/themes/kalekrate/form-minimal-full.scss
@@ -83,7 +83,8 @@
       width: 90%;
       right:0;
      }
-    @include mq($large) {
+    @include mq($medium) {
+        margin: 0;
         width:40%;
         right:-40px;
         top:21px;
@@ -94,7 +95,7 @@
      @include mq($xsmall) {
       float:none;
      }
-     @include mq($large) {
+     @include mq($medium) {
       float:right;
      }
   }
